--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@
   .navbar a {
     float: left;
     display: block;
-    color: white;
+    color: red;
     text-align: center;
     padding: 14px 20px;
     text-decoration: none;
