--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@
   
   /* Style the navigation bar links */
   .navbar a {
-    float: left;
+    float: center;
     display: block;
     color: red;
     text-align: center;
