--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
   /* Sticky navbar - toggles between relative and fixed, depending on the scroll position. It is positioned relative until a given offset position is met in the viewport - then it "sticks" in place (like position:fixed). The sticky value is not supported in IE or Edge 15 and earlier versions. However, for these versions the navbar will inherit default position */
   .navbar {
     overflow: hidden;
-    background-color: #333;
+    background-color: orange;
     position: sticky;
     position: -webkit-sticky;
     top: 0;
@@ -21,7 +21,7 @@
   
   /* Style the navigation bar links */
   .navbar a {
-    float: center;
+    float: left;
     display: block;
     color: red;
     text-align: center;
