--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
   
   .navbar {
     overflow: hidden;
-    background-color: black;
+    background-color: orange;
     position: sticky;
     position: -webkit-sticky;
     top: 0;
